fix: remove rodapé e corrige overflow no iPad

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -113,9 +113,14 @@
   * {
     @apply border-border outline-ring/50;
   }
+  html,
   body {
     @apply bg-background text-foreground;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    height: 100vh;
+    height: 100dvh;
   }
 }
